More mod compatibility & Add missing contributor names